# tidal-additions

./: LICENSE  README.md  tidal-additions.cabal
.stack-work/install/x86_64-osx/lts-9.2/8.0.2/flag-cache/: SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  network-2.6.3.2-IsLM4TXcLoRI0fmmBYVyQz  random-1.1-9tceXaeYIMZ4JrKq20Egog  safe-0.3.15-2Yd45VWFfdcKqKyispOifY
src/Sound/Tidal/: Additions.hs
